tests/mismatched-call.stderr
error: 
   ┌─ test:6:15
   │
 6 │ accepts-text (1 + 2)
   │               ^^^^^ expected `Text`, but found `Number`
   │
   ┌─ <dir>/std/math.wpl:25:16
   │
25 │   ('a + 'b) -> add 'b 'a
   │                --- actual error occurred here
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/mismatched-types

